--- a/testapp/templates/testapp/ctf.html
+++ b/testapp/templates/testapp/ctf.html
@@ -8,11 +8,11 @@
         }
 
         function mainpage() {
-            location.href='logout/'
+            location.href='/logout'
         }
 
         function mypage() {
-            location.href='http://127.0.0.1:8000/mypage/'
+            location.href='/mypage'
         }
     </script>
 </head>
